# careerflow

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.json  docker-compose.yml  render.yaml  store-urls.json
.github/: apple-secrets.template.md  pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_offers_add_offers_table.py  0003_smart_job_search.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: ai.py  analytics.py  applications.py  attachments.py  auth.py  certificates.py  companies.py  cvs.py  dashboard.py  interviews.py  job_filters.py  jobs.py  notes.py  offers.py  skills.py  tasks.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  pagination.py  ratelimit.py  security.py  storage.py  uploads.py
backend/app/models/: __init__.py  application.py  attachment.py  automation_rule.py  base.py  certificate.py  company.py  cv.py  enums.py  interview.py  job.py  job_search_filter.py  note.py  offer.py  skill.py  sourced_application.py  task.py  user.py
backend/app/repositories/: __init__.py  application.py  attachment.py  base.py  certificate.py  company.py  cv.py  interview.py  job.py  job_search_filter.py  note.py  offer.py  skill.py  stats.py  task.py  user.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  application.py  attachment.py  base.py  certificate.py  company.py  cv.py  dashboard.py  interview.py  job.py  note.py  offer.py  skill.py  task.py  user.py
backend/app/services/: __init__.py  ai.py  analytics.py  application.py  attachment.py  auth.py  certificate.py  company.py  cv.py  cv_tailoring.py  dashboard.py  interview.py  job.py  job_provider.py  job_search_filter.py  note.py  offer.py  skill.py  task.py  url_import.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_tailoring.py  test_analytics.py  test_applications.py  test_attachments.py  test_audit_logging.py  test_auth.py  test_certificates.py  test_companies.py  test_cvs.py  test_dashboard.py  test_interviews.py  test_jobs.py  test_notes.py  test_offers.py  test_ratelimit.py  test_seed.py  test_skills.py  test_tasks.py
backend/tests/unit/: test_config.py  test_security.py  test_smart_models.py  test_url_import.py
docs/: 01-product-requirements.md  02-technical-architecture.md  03-database-design.md  04-api-design.md  05-security-design.md  06-folder-structure.md  app-store-submission.md  backend-architecture-review.md  deploy-runbook.md  deployment-readiness.md  deployment.md  final-quality-gate.md  portfolio.md  privacy-policy.md  release-v1.0.0.md  repository-audit.md  (+2 more)
(+132 files in other folders)
