[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careerflow-backend"
version = "1.0.0"
description = "CareerFlow API — track job applications, interviews, tasks, and opportunities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CareerFlow" }]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0.30,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "bcrypt>=4.1,<5.0",
    "pyjwt>=2.8,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "email-validator>=2.1,<3.0",
    "slowapi>=0.1.9,<1.0",
    "sentry-sdk[fastapi]>=2.0,<3.0",
    "boto3>=1.34,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10.0",
    "pytest-cov>=5.0,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends/Query)

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"tests/*" = ["B008"]

# ---------------------------------------------------------------------------
# mypy — static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest & coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "error::DeprecationWarning",
    # Starlette's TestClient emits this via its httpx integration; out of our control.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
